--- a/style.css
+++ b/style.css
@@ -8,7 +8,8 @@
 .pixel {
   border: 1px solid black;
   display: inline-block;
-  padding: 20px;
+  width: 40px;
+  height: 40px;
   margin: 0.8px;
   background-color: white;
 }
@@ -16,4 +17,3 @@
 #pixel-board {
   margin-top: 20px;
 }
-
