--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 .color {
   border: 1px solid black;
   display: inline-block;
@@ -16,4 +15,20 @@
 
 #pixel-board {
   margin-top: 20px;
+}
+
+#black {
+  background-color: black;
+}
+
+#red {
+  background-color: red;
+}
+
+#green {
+  background-color: green;
+}
+
+#blue {
+  background-color: blue;
 }
