--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+* {
+  text-align: center;
+}
+
+body {
+  background-color:rgb(0, 176, 105);
+}
+
 .color {
   border: 1px solid black;
   display: inline-block;
@@ -15,20 +23,4 @@
 
 #pixel-board {
   margin-top: 20px;
-}
-
-#black {
-  background-color: black;
-}
-
-#red {
-  background-color: red;
-}
-
-#green {
-  background-color: green;
-}
-
-#blue {
-  background-color: blue;
 }
